--- a/src/components/frames/pageWraper/PageWrapper.css
+++ b/src/components/frames/pageWraper/PageWrapper.css
@@ -4,4 +4,5 @@
     align-items: center;
     width: 100%;
     min-height: 100vh;
+    gap: 60px;
 }
